# manim-voiceover

./: AGENTS.md  README.md  pyproject.toml  slophammer.yml  ty.toml
.github/workflows/: build.yml  python-publish.yml
docs-unchecked/: 2026-06-15-code-smells.md
docs/source/: api.rst  conf.py  installation.rst  quickstart.rst  services.rst
examples/: bookmark-example.py  kokoro-example.py  tts_compare_demo.py  voiceover-demo.py
manim_voiceover/: __init__.py  voiceover_scene.py
manim_voiceover/services/: elevenlabs.py  pyttsx3.py  stitcher.py
manim_voiceover/translate/: __init__.py  gettext_utils.py
scripts/: check_mutmut_results.py  compare_gtts_kokoro.sh
src/manim_voiceover/: __init__.py  _typing.py  helper.py  modify_audio.py  tracker.py  voiceover_scene.py
src/manim_voiceover/services/: azure.py  base.py  cache.py  elevenlabs.py  gemini.py  gtts.py  kokoro.py  openai.py  pyttsx3.py  stitcher.py
src/manim_voiceover/services/recorder/: __init__.py  utility.py
src/manim_voiceover/translate/: __init__.py  gettext_utils.py  render.py  translate.py
tests/: _render_assertions.py  test_cache_models.py  test_core_behavior.py  test_edge_coverage.py  test_examples_render.py  test_install.py  test_more_behavior.py  test_mutation_contracts.py  test_mutmut_result_checker.py  test_recorder_behavior.py  test_service_adapters.py  test_service_contracts.py  test_translation_cli.py
