[project]
name = "manim-voiceover"
version = "0.3.8"
description = "Manim plugin for all things voiceover"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [
    { name = "The Manim Community Developers", email = "contact@manim.community" },
]
keywords = [
    "text-to-speech",
    "tts",
    "voiceover",
    "manim",
    "recording",
    "speech synthesis",
    "math animations",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering",
    "Topic :: Multimedia :: Video",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Multimedia :: Sound/Audio :: Capture/Recording",
    "Topic :: Multimedia :: Sound/Audio :: Sound Synthesis",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Visualization",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Natural Language :: English",
]
dependencies = [
    "manim",
    "sox>=1.4.1,<2",
    "python-dotenv>=0.21.0,<0.22",
    "mutagen>=1.46.0,<2",
    "pydub>=0.25.1,<0.26",
    "pip>=21.0.1",
    "python-slugify>=8.0.1,<9",
]

[project.optional-dependencies]
azure = ["azure-cognitiveservices-speech>=1.24.0,<2"]
gtts = ["gTTS>=2.2.4,<3"]
openai = ["openai>=1.6.1,<2"]
pyttsx3 = ["pyttsx3>=2.90,<3"]
coqui = []
recorder = ["PyAudio>=0.2.12,<0.3", "pynput>=1.7.6,<2"]
translate = ["deepl>=1.12.0,<2"]
elevenlabs = ["elevenlabs>=0.2.27,<0.3"]
transcribe = ["openai-whisper>=20230314", "stable-ts>=2.6.2,<3"]
all = [
    "azure-cognitiveservices-speech>=1.24.0,<2",
    "gTTS>=2.2.4,<3",
    "pyttsx3>=2.90,<3",
    "PyAudio>=0.2.12,<0.3",
    "pynput>=1.7.6,<2",
    "openai>=1.6.1,<2",
    "deepl>=1.12.0,<2",
    "openai-whisper>=20230314",
    "stable-ts>=2.6.2,<3",
    "elevenlabs>=0.2.27,<0.3",
]

[project.urls]
Repository = "https://github.com/ManimCommunity/manim-voiceover"
Homepage = "https://voiceover.manim.community"
Documentation = "https://voiceover.manim.community"

[project.scripts]
manim_translate = "manim_voiceover.translate.translate:main"
manim_render_translation = "manim_voiceover.translate.render:main"

[project.entry-points."manim.plugins"]
manim_voiceover = "manim_voiceover"

[dependency-groups]
dev = [
    "Pygments>=2.13.0,<3",
    "pytest-cov>=3.0.0,<4",
    "pytest>=6.0,<7",
    "pylint>=2.12.2,<3",
    "Sphinx>=5,<6",
    "sphinx-copybutton>=0.4.0,<0.5",
    "sphinxext-opengraph>=0.5.1,<0.6",
    "furo>=2022.9.29,<2023.0.0",
    "recommonmark>=0.7.1,<0.8",
    "matplotlib>=3.3.2,<4",
    "pre-commit>=2.11.1,<3",
    "gitpython>=3,<4",
    "pygithub>=1,<2",
    "isort>=5.8.0,<6",
    "pytest-xdist>=2.2,<3",
    "mypy>=0.931,<0.932",
    "types-requests>=2.25.6,<3",
    "sphinxcontrib-programoutput>=0.17,<0.18",
    "psutil-wheels==5.8.0; python_version >= '3.10'",
    "psutil>=5.8.0,<6; python_version < '3.10'",
    "sphinxcontrib-video==0.0.1.dev3",
    "sphinx-sitemap>=2.2.1,<3",
]

[tool.hatch.build.targets.wheel]
packages = ["manim_voiceover"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
