[project]
name = "manim-voiceover"
version = "0.3.8"
description = "Manim plugin for all things voiceover"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "The Manim Community Developers", email = "contact@manim.community" },
]
keywords = [
    "text-to-speech",
    "tts",
    "voiceover",
    "manim",
    "recording",
    "speech synthesis",
    "math animations",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering",
    "Topic :: Multimedia :: Video",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Multimedia :: Sound/Audio :: Capture/Recording",
    "Topic :: Multimedia :: Sound/Audio :: Sound Synthesis",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Visualization",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Natural Language :: English",
]
dependencies = [
    "manim",
    "sox>=1.4.1,<2",
    "python-dotenv>=1.2.2,<2",
    "mutagen>=1.46.0,<2",
    "pydub>=0.25.1,<0.26",
    "pip>=26.1.2",
    "pydantic>=2.10,<3",
    "python-slugify>=8.0.1,<9",
]

[project.optional-dependencies]
azure = ["azure-cognitiveservices-speech>=1.24.0,<2"]
gtts = ["gTTS>=2.2.4,<3"]
openai = ["openai>=1.6.1,<2"]
pyttsx3 = ["pyttsx3>=2.90,<3"]
recorder = ["PyAudio>=0.2.12,<0.3", "pynput>=1.7.6,<2"]
translate = ["deepl>=1.12.0,<2"]
elevenlabs = ["elevenlabs>=0.2.27,<0.3"]
gemini = ["google-genai>=1.0,<3"]
transcribe = ["openai-whisper>=20230314", "stable-ts>=2.6.2,<3"]
all = [
    "azure-cognitiveservices-speech>=1.24.0,<2",
    "gTTS>=2.2.4,<3",
    "pyttsx3>=2.90,<3",
    "PyAudio>=0.2.12,<0.3",
    "pynput>=1.7.6,<2",
    "openai>=1.6.1,<2",
    "deepl>=1.12.0,<2",
    "openai-whisper>=20230314",
    "stable-ts>=2.6.2,<3",
    "elevenlabs>=0.2.27,<0.3",
    "google-genai>=1.0,<3",
]

[project.urls]
Repository = "https://github.com/ManimCommunity/manim-voiceover"
Homepage = "https://voiceover.manim.community"
Documentation = "https://voiceover.manim.community"

[project.scripts]
manim_translate = "manim_voiceover.translate.translate:main"
manim_render_translation = "manim_voiceover.translate.render:main"

[project.entry-points."manim.plugins"]
manim_voiceover = "manim_voiceover"

[dependency-groups]
dev = [
    "Pygments>=2.13.0,<3",
    "azure-cognitiveservices-speech>=1.24.0,<2",
    "deepl>=1.12.0,<2",
    "elevenlabs>=0.2.27,<0.3",
    "gTTS>=2.2.4,<3",
    "ipdb>=0.13,<0.14",
    "mutmut>=3.2",
    "openai>=1.6.1,<2",
    "pip-audit>=2.7",
    "PyAudio>=0.2.12,<0.3",
    "pytest-cov>=5.0.0,<7",
    "pytest>=9.0.3,<10",
    "pynput>=1.7.6,<2",
    "pyttsx3>=2.90,<3",
    "pylint>=2.12.2,<3",
    "ruff>=0.11",
    "Sphinx>=5,<6",
    "sphinx-copybutton>=0.4.0,<0.5",
    "sphinxext-opengraph>=0.5.1,<0.6",
    "furo>=2022.9.29,<2023.0.0",
    "recommonmark>=0.7.1,<0.8",
    "matplotlib>=3.3.2,<4",
    "pre-commit>=2.11.1,<3",
    "gitpython>=3,<4",
    "google-genai>=1.0,<3",
    "pygithub>=1,<2",
    "isort>=5.8.0,<6",
    "pytest-xdist>=3.6,<4",
    "mypy>=1.13,<1.14",
    "types-requests>=2.25.6,<3",
    "types-python-slugify>=8.0.2,<9",
    "sphinxcontrib-programoutput>=0.17,<0.18",
    "psutil>=5.8.0,<6",
    "sphinxcontrib-video==0.0.1.dev3",
    "sphinx-sitemap>=2.2.1,<3",
    "ty>=0.0.9",
]

[tool.ruff]
line-length = 127
target-version = "py311"
src = ["src", "tests"]
extend-exclude = ["docs", "examples", "mutants"]

[tool.ruff.lint]
select = ["E", "F", "I", "ANN", "C90", "TID"]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.mccabe]
max-complexity = 8

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["ANN"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: tests that execute external tools or full workflows",
    "network: tests that require outbound network access",
]

[tool.coverage.run]
source = ["src/manim_voiceover"]
branch = true

[tool.coverage.report]
fail_under = 85
show_missing = true

[tool.mutmut]
source_paths = ["src/manim_voiceover"]

[tool.mypy]
python_version = "3.11"
strict = true
show_error_codes = true
files = ["src/manim_voiceover"]

# These dependencies do not ship usable type information for the supported
# version range. Keep missing-import ignores scoped to those external
# boundaries instead of weakening all project imports.
[[tool.mypy.overrides]]
module = [
    "azure.*",
    "elevenlabs",
    "gtts",
    "pyaudio",
    "pydub",
    "pydub.*",
    "pyttsx3",
    "google.*",
    "scipy.interpolate",
    "sox",
]
ignore_missing_imports = true

[tool.hatch.build.targets.wheel]
packages = ["src/manim_voiceover"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
